--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,17 @@
     <title>Template</title>
 </head>
 <body>
+    <header id = "theHeader">
+        Hey I am the header
+    </header>
+    <div id = "sidebar">
+        Hey I am the sidebar
+    </div>
+    <div id = "projectSpace">
+        Hey I am the project space
+    </div>
+    <footer id="theFooter">
+        Hey I am the footer
+    </footer>
 </body>
 </html>
