--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
     <header id = "theHeader">
         Hey I am the header
     </header>
-    <div id = "sidebar">
+    <div id = "theSidebar">
         Hey I am the sidebar
     </div>
-    <div id = "projectSpace">
+    <div id = "theProjectSpace">
         Hey I am the project space
     </div>
     <footer id="theFooter">
