Using pretty command to improve the code

--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Template</title>
-</head>
-<body>
-    <header id = "theHeader">
-    </header>
-    <div id = "theSidebar">
-    </div>
-    <div id = "theProjectSpace">
-    </div>
-    <footer id="theFooter">
-    </footer>
-</body>
+  </head>
+  <body>
+    <header id="theHeader"></header>
+    <div id="theSidebar"></div>
+    <div id="theProjectSpace"></div>
+    <footer id="theFooter"></footer>
+  </body>
 </html>
